fix: label node alignment (#15)

--- a/src/styles/JSONNestedNode.module.scss
+++ b/src/styles/JSONNestedNode.module.scss
@@ -21,7 +21,7 @@
 }
 
 .nestedNodeLabelWrap {
-  display: var(--json-tree-inline-flex);
+  display: var(--json-tree-block);
   align-items: var(--json-tree-align-items);
   cursor: pointer;
 }
